# bitframe

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile
.github/workflows/: ci.yml  release.yml
crates/bitframe/: Cargo.toml
crates/bitframe-derive/: Cargo.toml
crates/bitframe-derive/src/: bitframe_attr.rs  bitframe_enum_attr.rs  codegen.rs  extract.rs  field.rs  lib.rs
crates/bitframe/examples/: can_bus.rs  ccsds.rs  custom_sensor.rs
crates/bitframe/src/: error.rs  lib.rs  traits.rs  types.rs
crates/bitframe/tests/: behavior.rs
docs/: AUDIT.md  DESIGN.md  DEVELOPER_EXPERIENCE.md  RELEASE.md  ROADMAP.md  VISION.md  landscape.md
