[package]
name = "bitframe-derive"
version = "0.1.1" # keep in sync with VERSION file (single source of truth)
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Jan Piotrzkowski"]
description = "Proc-macro internals for bitframe — not a public API"
homepage = "https://github.com/stateruntime/bitframe"
documentation = "https://docs.rs/bitframe"
keywords = ["bitfield", "proc-macro", "binary"]
categories = ["parsing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
