[package]
name = "bitframe"
version = "0.1.0" # keep in sync with VERSION file (single source of truth)
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Jan Piotrzkowski"]
description = "Macro-driven bit-level packet formats with zero-copy parsing and serialization"
homepage = "https://github.com/piotrzkowskij/bitframe"
documentation = "https://docs.rs/bitframe"
readme = "../../README.md"
keywords = ["bitfield", "binary", "parser", "telemetry", "embedded"]
categories = ["parsing", "no-std"]
exclude = [
    ".github/",
    ".editorconfig",
    "CLAUDE.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "docs/",
    "scripts/",
    "tests/",
    "justfile",
    "deny.toml",
    "rustfmt.toml",
    "rust-toolchain.toml",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []

[dependencies]
bitframe-derive = { path = "../bitframe-derive", version = "0.1.0" }

[dev-dependencies]
behave = "0.7"

[lints]
workspace = true
